# pip-drake

./: .bazelignore  .bazelproject  .dockerignore  .editorconfig  .gitattributes  .gitignore  .yapfignore  BUILD.bazel  Dockerfile  LICENSE  README.md  WORKSPACE.bazel  build-wheels.sh  build_pip_package.sh  build_whls_with_docker  projects.cmake  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
image/: build-dependencies.sh  build-drake.sh  build-wheel.sh  pip-drake.patch  provision-base.sh  provision.sh  setup.py  vtk-args
image/dependencies/: CMakeLists.txt  projects.cmake
image/dependencies/projects/: bzip2.cmake  double-conversion.cmake  eigen.cmake  libjpeg-turbo.cmake  libtiff.cmake  libxcrypt.cmake  lz4.cmake  msgpack.cmake  nlopt.cmake  patchelf.cmake  png.cmake  tinyxml2.cmake  xz.cmake  zlib.cmake
projects/: gflags.cmake  lapack.cmake  libtiff.cmake  lz4.cmake  suitesparse.cmake  xz.cmake  yaml-cpp.cmake
